Updated coverage report

--- a/cover/movieapi_app_permissions_py.html
+++ b/cover/movieapi_app_permissions_py.html
@@ -104,7 +104,7 @@
 <p id="t14" class="stm run hide_run">        <span class="key">if</span> <span class="nam">request</span><span class="op">.</span><span class="nam">method</span> <span class="key">in</span> <span class="nam">permissions</span><span class="op">.</span><span class="nam">SAFE_METHODS</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
 <p id="t15" class="stm mis">            <span class="key">return</span> <span class="key">True</span><span class="strut">&nbsp;</span></p>
 <p id="t16" class="pln"><span class="strut">&nbsp;</span></p>
-<p id="t17" class="pln">        <span class="com"># Write permissions are only allowed to the owner of the snippet.</span><span class="strut">&nbsp;</span></p>
+<p id="t17" class="pln">        <span class="com"># Write permissions are only allowed to the owner of the object.</span><span class="strut">&nbsp;</span></p>
 <p id="t18" class="stm run hide_run">        <span class="key">return</span> <span class="nam">obj</span><span class="op">.</span><span class="nam">author</span> <span class="op">==</span> <span class="nam">request</span><span class="op">.</span><span class="nam">user</span><span class="strut">&nbsp;</span></p>
 
             </td>
@@ -116,7 +116,7 @@
     <div class="content">
         <p>
             <a class="nav" href="index.html">&#xab; index</a> &nbsp; &nbsp; <a class="nav" href="https://coverage.readthedocs.io">coverage.py v4.5.3</a>,
-            created at 2019-05-13 02:07
+            created at 2019-05-13 06:10
         </p>
     </div>
 </div>
